# voice_bot

./: Pasted--Serving-Flask-app-app-Debug-mode-off-INFO-werkzeug-WARNING-This-is-a-development-server--1732778387947.txt  Pasted--Serving-Flask-app-app-Debug-mode-off-INFO-werkzeug-WARNING-This-is-a-development-server--1732778677822.txt  app.py  models.py  pyproject.toml  replit.nix
instance/: chat.db
static/css/: style.css
static/js/: audio.js  chat.js
templates/: index.html
utils/: openai_helper.py
