[project]
name = "repl-nix-voxchatmvp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.55.1",
    "requests>=2.32.3",
    "gtts>=2.5.4",
    "flask-socketio>=5.4.1",
    "eventlet>=0.38.0",
]
