[project]
name = "repl-nix-voxchatmvp"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "openai>=1.55.1",
    "requests>=2.32.3",
    "gtts>=2.5.4",
    "simple-websocket>=1.1.0",
    "flask-socketio>=5.4.1",
    "gevent>=24.11.1",
    "gevent-websocket>=0.10.1",
]
